# PyZwoCapture

./: LICENSE  README.rst  pyproject.toml
src/PyZwoCapture/: CameraCapture.py  requirements.txt
